# chatbot-multimodal

./: .env.production  .gitignore  README.md  local.settings.json  main.py  pyproject.toml  requirement.txt
.github/workflow/: deploy.yml
.github/workflows/: main_chatbot-multimodal.yml
app/: chainlit_app.py  main.py
app/chains/: create_faiss_index.py  langchain_agent.py  langchain_rag.py
app/config/: settings.py
app/data/faiss_index/: index.faiss  index.pkl
app/llm_validators/: answer_relevance.py  base.py  prompt_injection.py
app/services/: azure_openai.py
app/utils/: build_faiss_index.py  helpers.py  image_utils.py
azure_function/: function.json  function_config.py  function_handler.py
